# iit-centauro-ros-pkg

./: .gitignore  .travis.yml  CMakeLists.txt  GenerateDeb.cmake  GenerateXrdf.cmake  README.md
centauro_cartesio/: centauro_manipulation.launch  centauro_manipulation_stack.yaml  centauro_wheeled_motion.launch  centauro_wheeled_motion_stack.yaml  manifest.xml  rviz_cartesio.rviz
centauro_cartesio_config/: CMakeLists.txt  centauro_collision_avoidance_stack.yaml  centauro_wheeled_motion.launch  package.xml  pose_check.py  pose_check_v2.py
centauro_config/: CMakeLists.txt  centauro.yaml  centauro_basic.yaml  centauro_example.yaml  centauro_joint_map.yaml  centauro_ros.yaml  package.xml
centauro_config/configs/: centauro.yaml  centauro_example.yaml
centauro_config/hal/: centauro_dummy.yaml  centauro_gz.yaml
centauro_gazebo/: CMakeLists.txt  package.xml
centauro_gazebo/database/: database.config
centauro_gazebo/database/centauro/: centauro.sdf
centauro_gazebo/database/centauro_urdf/meshes/simple/: head-base_mesh.stl
centauro_gazebo/database/centauro_urdf/meshes/v2/: ankle-pitch.stl
centauro_gazebo/database/centauro_urdf/meshes/v2/collision/: hip-pitch.stl
centauro_gazebo/database/centauro_virtual_frame/: centauro.sdf  manifest.xml
centauro_gazebo/launch/: .centauro_world.launch.swp  centauro.launch.py  centauro.launch.xml  centauro_inclined_10_world.launch  centauro_perception.launch  centauro_world.launch  centauro_world_BACKUP_17100.launch  centauro_world_BACKUP_17744.launch  centauro_world_BACKUP_19031.launch  centauro_world_LOCAL_16932.launch  my_centauro_world.launch
centauro_gazebo/urdf/: centauro_gazebo.urdf.xacro  centauro_sensors.urdf.xacro
centauro_gazebo/world/: centauro.world
centauro_gazebo/worlds/: centauro.world  centauro_inclined_-10.world  centauro_inclined_10.world  centauro_inclined_20.world  my_centauro.world
centauro_isaac_gym/centauro_description/: README.md  isaac_arm1_centauro.urdf  isaac_arm2_centauro.urdf
centauro_mujoco/: CMakeLists.txt  package.xml
centauro_mujoco/config/: centauro.yaml  options.xml  sites.xml  world.xml
centauro_mujoco/launch/: centauro_world.launch
centauro_mujoco/src/: centauro_mujoco.py
centauro_sensors/: CMakeLists.txt  package.xml
centauro_sensors/launch/: bringup_head_camera.launch
centauro_srdf/: CMakeLists.txt  package.xml
centauro_srdf/srdf/: .centauro.srdf.swp  centauro.srdf  centauro.srdf.xacro  centauro_capsule.srdf  centauro_capsules.srdf  centauro_virtual_frame.srdf  centauro_virtual_frame_capsule.srdf  centauro_virtual_frame_capsules.srdf  pholus.srdf.xacro
centauro_srdf/srdf/capsule/: centauro_capsules.srdf
centauro_test/: CMakeLists.txt  generate_pinocchio_capsules.py  gz_test.py  package.xml  stress_test_lb.py  stress_test_ub.py
centauro_urdf/: CMakeLists.txt  package.xml
centauro_urdf/doc/v2/: URDF Ankle-Pitch.docx  URDF Ankle-yaw.docx  URDF Knee.docx  URDF Pelvis.docx  URDF Rod-plate End Effector.docx  URDF Torso-yaw.docx  URDF Wheel.docx  URDF hip-pitch.docx  URDF hip-yaw.docx  URDF wheel23.docx
centauro_urdf/launch/: centauro.rviz  centauro_capsules_slider.launch  centauro_slider.launch
centauro_urdf/meshes/: ankle_pitch_right.stl  ankle_yaw_right.stl  hip_pitch_right.stl  hip_yaw_right.stl  knee_right.stl  lidar.stl  lidar_mesh.stl  neck-pitch_mesh.stl  tof_camera.stl  wheel.stl  wrist_pitch_right.stl
centauro_urdf/meshes/simple/: RodPlate.stl  ankle_pitch_right.stl  ankle_yaw_right.stl  front_right_stick.stl  hand_v6_left.stl  hip-yaw.capsule  hip_pitch_right.stl  hip_yaw_right.stl  knee_right.stl  lidar.stl  link1_no_head.stl  pelvis.capsule  pelvis.stl  pelvis_reduced.stl  tof_camera.stl  torso.stl  wrist_pitch_right.stl
centauro_urdf/meshes/v2/: ankle-pitch.stl  ankle-yaw.stl  hip-pitch.stl  hip-yaw.stl  knee.stl  mesh_ankle-yaw_wheel23.stl  mesh_wheel23.stl  pelvis.stl  torso-yaw.stl  wheel.stl
centauro_urdf/meshes/v2/collision/: ankle-pitch.stl  ankle-yaw.stl  hip-yaw.stl  knee.stl  mesh_ankle-yaw_wheel23.stl  mesh_wheel23.stl  wheel.stl
centauro_urdf/script/: load_acm.py
centauro_urdf/urdf/: _centauro_robot.urdf  centauro.urdf  centauro.urdf.xacro  centauro.xml  centauro_base.urdf.xacro  centauro_calib.urdf  centauro_capsule.urdf  centauro_capsules.rviz  centauro_config.urdf.xacro  centauro_dagana.urdf  centauro_dagana_fixed.urdf  centauro_dagana_virtual_frame_capsule.urdf  centauro_mjc_test.urdf  centauro_pinocchio_capsule.urdf  centauro_robot.urdf  centauro_robot.urdf.xacro  centauro_virtual_frame.urdf  centauro_virtual_frame_capsule.urdf  centauro_virtual_frame_robot.urdf  pholus.urdf.xacro  pholus_base.urdf.xacro  pholus_capsules.rviz  pholus_config.urdf.xacro  pholus_robot.urdf.xacro  utils.urdf.xacro
centauro_urdf/urdf/capsule/: centauro_capsules.urdf
centauro_urdf/urdf/config/: centauro.urdf.xacro  centauro_robot.urdf.xacro  centauro_virtual_frame.urdf.xacro
centauro_urdf/urdf/gazebo/: centauro.gazebo.xacro  force_torque.gazebo.xacro  materials.gazebo.xacro  pholus.gazebo.xacro  pholus_materials.gazebo.xacro  xbot.gazebo.xacro
centauro_urdf/urdf/parts/: arm_macro.urdf.xacro  arms.urdf.xacro  arms_reference_frames.urdf.xacro  ball.urdf.xacro  centauro_arm.urdf.xacro  centauro_leg.urdf.xacro  centauro_torso.urdf.xacro  head.urdf.xacro  inertial_properties.urdf.xacro  inertial_properties_calib.urdf.xacro  intel_d435i_frames.urdf.xacro  kinematics_properties.urdf.xacro  leg_macro.urdf.xacro  legs.urdf.xacro  rod_plate.urdf.xacro  wheel.urdf.xacro  wheel23.urdf.xacro  zed_mini.urdf.xacro  zed_x_mini.urdf.xacro
