<?xml version="1.0"?>
<package format="2">
  <name>centauro_config</name>
  <version>0.0.0</version>
  <description>The centauro_config package</description>

  <maintainer email="enrico@todo.todo">enrico</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--depend>cartesian_interface</depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
