<?xml version="1.0"?>
<package format="2">
  <name>centauro_mujoco</name>
  <version>0.0.0</version>
  <description>The centauro_mujoco package</description>

  <maintainer email="enrico@todo.todo">enrico</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
